<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AdminPinFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter PIN to access Admin Priveleges"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/enter_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Pin"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit" />

</LinearLayout>